--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "theme-switch",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.2",
+  "description": "Easily manage and switch themes",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +13,18 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-render-html": "^0.6.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eprince1/theme-switch-npm.git"
+  },
+  "keywords": [
+    "theme",
+    "switch"
+  ],
+  "bugs": {
+    "url": "https://github.com/eprince1/theme-switch-npm/issues"
+  },
+  "homepage": "https://github.com/eprince1/theme-switch-npm#readme"
 }
