--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "theme-switch",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Easily manage and switch themes",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,9 @@
     "type": "git",
     "url": "git+https://github.com/eprince1/theme-switch-npm.git"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "theme",
     "switch"
