--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   "author": "Eitan Prince",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-render-html": "^0.6.0"
+    "axios": "^0.19.1"
   },
   "devDependencies": {},
   "repository": {
