--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "theme-switch",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Easily manage and switch themes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify index.js -o dist/module.js"
   },
   "author": "Eitan Prince",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.1"
+    "axios": "^0.19.1",
+    "firebase": "^7.14.6"
   },
   "devDependencies": {},
   "repository": {
